Fig Schéma noyau rajouté avec photo + dimensions

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1,4 +1,11 @@
 
+@online{fontbonne_postprocessing_2025,
+author = {Fontbonne, Martin},
+title = {{\textsc{Tacot} post processing codes}},
+year = {2025},
+url = {https://github.com/ohmenkoler/tacotpostprocessing},
+}
+
 @article{horton_convection_1945,
 	title = {Convection Currents in a Porous Medium},
 	volume = {16},
